--- a/templates/header.html
+++ b/templates/header.html
@@ -13,7 +13,7 @@
       
       
       
-    <title>DIGIT 400</title>
+    <title>Drift Haven</title>
       
     <script>
       $('#myModal').on('shown.bs.modal', function () {
@@ -30,7 +30,14 @@
 
           gtag('config', 'UA-136593595-1');
         </script>
-
+      
+       <!-- custom css -->
+      <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/style.css')}}">
+      
+      
+         <!-- google material icons -->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
       
   </head>
   <body>
@@ -40,9 +47,9 @@
       <!-- NavBar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="50" height="50" alt="main logo for digit 400 site">
+            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="50" height="50" alt="main logo for drift haven site">
         </a>
-  <a class="navbar-brand" href="/">DIGIT 400</a>
+  <a class="navbar-brand" href="/">Drift Haven</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -57,7 +64,8 @@
       </li>
         <!-- {% endif %} -->
       <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter">Login</a>
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter">
+            <i class="material-icons">account_box</i>Login</a>
       </li>
     </ul>
   </div>
