--- a/templates/main.html
+++ b/templates/main.html
@@ -31,6 +31,13 @@
           gtag('config', 'UA-136593595-1');
         </script>
       
+      <!-- custom css -->
+      <link rel="stylesheet" type="text/css" href="{{url_for('static',filename='css/style.css')}}">
+      
+        <!-- google material icons -->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+      
   </head>
     
     
@@ -72,7 +79,7 @@
       <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalCenterTitle">Login</h5>
+            <h5 class="modal-title" id="exampleModalCenterTitle"><i class="material-icons"> account_box</i>Login</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
