--- a/templates/500.html
+++ b/templates/500.html
@@ -13,6 +13,6 @@
     
 </div>
 
-<img class="fixed-bottom" src="{{ url_for('static',filename='images/dancecat.gif') }}" style="width: 35%; float:right">
+<!-- <img class="fixed-bottom" src="{{ url_for('static',filename='images/dancecat.gif') }}" style="width: 35%; float:right"> -->
     
 {% endblock %}
