--- a/templates/header.html
+++ b/templates/header.html
@@ -45,31 +45,55 @@
       
     
       <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="50" height="50" alt="main logo for drift haven site">
+   
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #8B0000;">
+    <a class="navbar-brand" href="/">
+            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
         </a>
   <a class="navbar-brand" href="/">Drift Haven</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/"> <span class="sr-only">(current)</span></a>
       </li>
-       <!-- {% if session.logged_in %} -->
-      <li class="nav-item">
+         <li class="nav-item">
         <a class="nav-link" href="/dashboard/">Dashboard</a>
       </li>
-        <!-- {% endif %} -->
-      <li class="nav-item">
-        <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter">
-            <i class="material-icons">account_box</i>Login</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Products
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/chassismountwing/">Chassis Mount Wing</a>
+          <a class="dropdown-item" href="/duckbillwing/">Duckbill Wing</a>
+            <a class="dropdown-item" href="/splitters/">Splitters</a>
+            <a class="dropdown-item" href="/bodykits/">Body Kits</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Home</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Companies
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
       </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
-</nav> 
+</nav>
       <!-- End NavBar -->
       
        <!-- Flashes! -->
