--- a/templates/main.html
+++ b/templates/main.html
@@ -13,7 +13,7 @@
       
       
       
-    <title>DIGIT 400</title>
+    <title>Drift Haven</title>
       
     <script>
       $('#myModal').on('shown.bs.modal', function () {
@@ -44,66 +44,96 @@
   <body>
     
       <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="50" height="50" alt="main logo for digit 400 site">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #8B0000;">
+    <a class="navbar-brand" href="/">
+            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
         </a>
-  <a class="navbar-brand" href="/">DIGIT 400</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <a class="navbar-brand" href="/">Drift Haven</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="/"> <span class="sr-only">(current)</span></a>
       </li>
-       <!-- {% if session.logged_in %} -->
-      <li class="nav-item">
+         <li class="nav-item">
         <a class="nav-link" href="/dashboard/">Dashboard</a>
       </li>
-    <!-- {# endif #} -->
-      <li class="nav-item">
-       <a class="nav-link" href="#" data-toggle="modal" data-target="#exampleModalCenter">Login</a>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Products
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="/chassismountwing/">Chassis Mount Wing</a>
+          <a class="dropdown-item" href="/duckbillwing/">Duckbill Wing</a>
+            <a class="dropdown-item" href="/splitters/">Splitters</a>
+            <a class="dropdown-item" href="/bodykits/">Body Kits</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Home</a>
+        </div>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Companies
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
       </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   </div>
-</nav> 
+</nav>
       <!-- End NavBar -->
       
-      <video autoplay muted loop style="width: 100%">
-          <source src="/static/videos/space_cats.mp4" type="video/mp4">
-      </video>
-      
-      <!-- Modal -->
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-      <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalCenterTitle"><i class="material-icons"> account_box</i>Login</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-        <div class="container">
-        <br>
-        <h4>Login</h4>
-        <br>
-            <form action="#" method="post">
-                <input type="text" class="form-control" placeholder="User Name" name="username" value="{{request.form.username}}">
-                &nbsp;
-                <input type="password" class="form-control" placeholder="Password" name="password" value="{{request.form.password}}">
-                &nbsp;
-
-                <input class="btn btn-danger" type="submit" value="Login"> 
-            </form>
-            <br>
-            <p><code>{{ error }}</code></p>
-                <hr>
-                    <p>Hey, need an account? <a href="/register/" sty;e="text-decoration: none;"></a> Register here</p>
-            </div>
+<div class="bd-example">
+  <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+      <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="https://cdn.shopify.com/s/files/1/0919/7894/products/20190303063623_IMG_1941_1_2048x2048.JPG?v=1555533007" class="d-block w-100" alt="WRX">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><a href="https://www.battleaero.com/collections/body/products/wide-body-kit-for-02-03-subaru-wrx-sti-gdbugeye"><font size="6" color="white">02-03 WRX Wide Body Bugeye!</font></a></h5>
+          <p><font>Check out the NEW WRX Bugeye Widebody by BattleAero!</font></p>
         </div>
       </div>
-    </div> 
+      <div class="carousel-item">
+        <img src="https://images-na.ssl-images-amazon.com/images/I/81JCIY11ZhL._SL1500_.jpg" class="d-block w-100" alt="Diffuser">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><a href="https://streetaero.com/collections/diffusers?page=1"><font size="6" color="white">Custom Splitters at StreetAero</font></a></h5>
+          <p><font>Check out these custom rear diffusers from StreetAero!</font></p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="https://www.carid.com/images/inspiration/nissan/350z/10/1.jpg" class="d-block w-100" alt="RocketBunny">
+        <div class="carousel-caption d-none d-md-block">
+          <h5><a href="http://www.greddy.com/products/aerodynamics/rocketbunny/"><font size="6" color="white">Rocket Bunny WideBody Kit</font></a></h5>
+          <p><font>Check out the highly recommended Rocket Bunny Kit from Greddy!</font></p>
+        </div>
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
       <!-- END MODAL -->
 
     <!-- Optional JavaScript -->
