--- a/templates/404.html
+++ b/templates/404.html
@@ -10,7 +10,7 @@
     
 <a href="javascript:history.go(-1)"><button type="button" class="btn btn-outline-warning">Go Back!</button></a>
     
-    <img style="float: right" class="fixed-bottom" src="{{ url_for('static',filename='images/pizzacat.gif') }}" style="width: 35%">
+    <img style="float: right" src="{{ url_for('static',filename='images/giphy.gif') }}" style="width: 35%">
     
 </div>
 {% endblock %}
