--- a/templates/header.html
+++ b/templates/header.html
@@ -46,9 +46,9 @@
     
       <!-- NavBar -->
    
-<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #8B0000;">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
+            <img src="{{ url_for('static', filename='/images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
         </a>
   <a class="navbar-brand" href="/">Drift Haven</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -70,10 +70,13 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/chassismountwing/">Chassis Mount Wing</a>
           <a class="dropdown-item" href="/duckbillwing/">Duckbill Wing</a>
-            <a class="dropdown-item" href="/splitters/">Splitters</a>
+            <a class="dropdown-item" href="/trunkmounted/">Trunk Mounted</a>
             <a class="dropdown-item" href="/bodykits/">Body Kits</a>
+            <a class="dropdown-item" href="/diffusers/">Diffusers</a>
+            <a class="dropdown-item" href="/splitters/">Splitters</a>
+             <a class="dropdown-item" href="/decals/">Decals</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Home</a>
+          <a class="dropdown-item" href="/">Home</a>
         </div>
       </li>
       <li class="nav-item dropdown">
@@ -81,11 +84,16 @@
           Companies
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="/companies/">Companies Listed</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="/">Home</a>
         </div>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/support/">Support</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/about/">About</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -151,11 +159,16 @@
       </div>
     </div> 
       <!-- END MODAL -->
+      
+      
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+      
+      
+      
   </body>
 </html>
