--- a/templates/main.html
+++ b/templates/main.html
@@ -42,11 +42,10 @@
     
     
   <body>
-    
       <!-- NavBar -->
-    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #8B0000;">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/">
-            <img src="{{ url_for('static', filename='images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
+            <img src="{{ url_for('static', filename='/images/mainlogo.png') }}" width="75" height="75" alt="main logo for drift haven site">
         </a>
   <a class="navbar-brand" href="/">Drift Haven</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -65,11 +64,14 @@
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Products
         </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="/chassismountwing/">Chassis Mount Wing</a>
           <a class="dropdown-item" href="/duckbillwing/">Duckbill Wing</a>
-            <a class="dropdown-item" href="/splitters/">Splitters</a>
+            <a class="dropdown-item" href="/trunkmounted/">Trunk Mounted</a>
             <a class="dropdown-item" href="/bodykits/">Body Kits</a>
+            <a class="dropdown-item" href="/diffusers/">Diffusers</a>
+            <a class="dropdown-item" href="/splitters/">Splitters</a>
+             <a class="dropdown-item" href="/decals/">Decals</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" href="#">Home</a>
         </div>
@@ -79,11 +81,16 @@
           Companies
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" href="/companies/">Companies Listed</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
+          <a class="dropdown-item" href="/">Home</a>
         </div>
+      </li>
+         <li class="nav-item">
+        <a class="nav-link" href="/support/">Support</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link" href="/about/">About</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
@@ -93,7 +100,12 @@
   </div>
 </nav>
       <!-- End NavBar -->
-      
+      <div style="text-align:center">
+  <h2>Welcome to DriftHaven!</h2>
+  <p>Check out the featured products of the month below!</p>
+    <p>You can also visit our Support page to submit local companies that make quality parts!</p>
+</div>  
+     
 <div class="bd-example">
   <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <ol class="carousel-indicators">
@@ -105,22 +117,22 @@
       <div class="carousel-item active">
         <img src="https://cdn.shopify.com/s/files/1/0919/7894/products/20190303063623_IMG_1941_1_2048x2048.JPG?v=1555533007" class="d-block w-100" alt="WRX">
         <div class="carousel-caption d-none d-md-block">
-          <h5><a href="https://www.battleaero.com/collections/body/products/wide-body-kit-for-02-03-subaru-wrx-sti-gdbugeye"><font size="6" color="white">02-03 WRX Wide Body Bugeye!</font></a></h5>
-          <p><font>Check out the NEW WRX Bugeye Widebody by BattleAero!</font></p>
+          <h5><a href="https://www.battleaero.com/collections/body/products/wide-body-kit-for-02-03-subaru-wrx-sti-gdbugeye"><button type="button" class="btn btn-secondary"><font size="6" color="white">02-03 Subaru WRX / STI WideBody Fender Flares</font></button></a></h5></button>
+          <p><font size="6">Check out the NEW WRX Bugeye Widebody by BattleAero!</font></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://images-na.ssl-images-amazon.com/images/I/81JCIY11ZhL._SL1500_.jpg" class="d-block w-100" alt="Diffuser">
         <div class="carousel-caption d-none d-md-block">
-          <h5><a href="https://streetaero.com/collections/diffusers?page=1"><font size="6" color="white">Custom Splitters at StreetAero</font></a></h5>
-          <p><font>Check out these custom rear diffusers from StreetAero!</font></p>
+          <h5><a href="https://streetaero.com/collections/diffusers?page=1"><button type="button" class="btn btn-secondary"><font size="6" color="white">Custom Diffusers From StreetAero</font></button></a></h5></button>
+          <p><font size="6">Check out these custom rear diffusers from StreetAero!</font></p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="https://www.carid.com/images/inspiration/nissan/350z/10/1.jpg" class="d-block w-100" alt="RocketBunny">
         <div class="carousel-caption d-none d-md-block">
-          <h5><a href="http://www.greddy.com/products/aerodynamics/rocketbunny/"><font size="6" color="white">Rocket Bunny WideBody Kit</font></a></h5>
-          <p><font>Check out the highly recommended Rocket Bunny Kit from Greddy!</font></p>
+            <h5><a href="http://www.greddy.com/products/aerodynamics/rocketbunny/"><button type="button" class="btn btn-secondary"><font size="6" color="white">Rocket Bunny WideBody Kit</font></button></a></h5></button>
+          <p><font size="6">Check out the highly recommended Rocket Bunny Kit from Greddy!</font></p>
         </div>
       </div>
     </div>
@@ -134,6 +146,18 @@
     </a>
   </div>
 </div>
+    <!-- Footer -->
+<footer class="page-footer font-small red">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="https://drifthaven.site"> DriftHaven.Site</a>
+  </div>
+
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
       <!-- END MODAL -->
 
     <!-- Optional JavaScript -->
